--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           	<h2>The Technology</h2>
 
           	<h2>Screenshots</h2>
-            <img href="trisi.png">
+            <img src="trisis.png">
 
           	
       	</main>
