--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
       <div class="container">
       	<main> 
           	<h2>The Game</h2>
-          	
+          	This game is a 3D version of the game Tetris, to move the cubes around you use the arrow keys, a,z,s,x,d,c control rotation of the current cube, and spacebar makes the cube drop faster. The mouse is used to rotate the perspective. <br>
+          	The UI is horrible, but was not the main focus of the project.
           	<h2>The Technology</h2>
-
+          	WebGl, JavaScript
           	<h2>Screenshots</h2>
             <img src="trisis.png">
 
